--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,16 +39,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ms/anaconda3/envs/wisdom-mlab/lib/python3.12/site-packages/langchain_core/_api/deprecation.py:117: LangChainDeprecationWarning: The class `langchain_community.llms.openai.OpenAI` was deprecated in langchain-community 0.0.10 and will be removed in 0.2.0. An updated version of the class exists in the langchain-openai package and should be used instead. To use it run `pip install -U langchain-openai` and import as `from langchain_openai import OpenAI`.\n",
+      "  warn_deprecated(\n"
+     ]
+    }
+   ],
    "source": [
     "llm_openai = OpenAI(temperature=0, openai_api_key=OPENAI_API_KEY)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +77,7 @@
        "dict_keys(['id', 'doi', 'title', 'display_name', 'publication_year', 'publication_date', 'ids', 'language', 'primary_location', 'type', 'type_crossref', 'indexed_in', 'open_access', 'authorships', 'countries_distinct_count', 'institutions_distinct_count', 'corresponding_author_ids', 'corresponding_institution_ids', 'apc_list', 'apc_paid', 'has_fulltext', 'cited_by_count', 'cited_by_percentile_year', 'biblio', 'is_retracted', 'is_paratext', 'keywords', 'concepts', 'mesh', 'locations_count', 'locations', 'best_oa_location', 'sustainable_development_goals', 'grants', 'referenced_works_count', 'referenced_works', 'related_works', 'ngrams_url', 'abstract_inverted_index', 'cited_by_api_url', 'counts_by_year', 'updated_date', 'created_date'])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +117,7 @@
        "15"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,16 +184,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\n\\nThis paper discusses a new method, N EURO IMAGEN, for reconstructing high-resolution images from EEG signals. It uses multi-level semantics extraction and a latent diffusion model to improve accuracy and overcome challenges of using EEG data. The method is compared to previous approaches and found to be superior. It also discusses the use of language models and evaluation metrics in the process. The study validates the method and demonstrates its effectiveness in generating high-quality images from brain signals. Other related works in the field are also mentioned.'"
+       "'\\n\\nThe articles discuss the use of EEG signals to reconstruct visual stimuli images and propose a new method, N EURO IMAGEN, which uses multi-level semantics extraction and a latent diffusion model for more accurate and efficient image reconstruction. The method is compared to previous approaches and found to be superior. It also discusses the use of saliency maps and image captions to align EEG signals and reconstruct images. The results show promising results in generating high-quality images from brain signals. The articles also explore the potential applications of these methods in fields such as computer vision and neuroscience.'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,9 +204,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Token indices sequence length is longer than the specified maximum sequence length for this model (2624 > 1024). Running this sequence through the model will result in indexing errors\n"
+     ]
+    }
+   ],
    "source": [
     "chain = load_summarize_chain(\n",
     "    llm,\n",
@@ -212,34 +229,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " * In 2012, Krizhevsky et al. introduced deep learning models for image classification in the ImageNet Large Scale Visual Recognition Challenge (ILSVRC).\n",
-      "* In 2015, Schroff et al. proposed a deep neural network for face recognition using Facenet.\n",
-      "* In 2016, Deng et al. presented NeuroVision: end-to-end deep image reconstruction from brain activity.\n",
-      "* In 2017, Spampinato et al. introduced DeepMindSight, a neural network system that can learn to decode high-level visual percepts from human brain signals.\n",
-      "* In 2018, Chen et al. presented Brain2Image: generating high-resolution images from EEG signals using generative adversarial networks (GANs).\n",
-      "* In 2019, Shen et al. introduced N EURO IMAGEN: a method for reconstructing images from EEG signals using a multi-modal deep learning approach.\n",
-      "* In 2020, Zeng et al. presented the Controllable Mind Visual Diffusion Model for generating high-quality images and controlling their semantics using brain activity.\n",
-      "* In 2020, Zhao et al. introduced DARTS: a differentiable augmentation technique for data-efficient GAN training to improve performance and reduce dependency on large datasets.\n",
-      "* In 2021, Ho et al. presented BRAINSIM: a neural network system for generating high-resolution images from brain signals using generative adversarial networks (GANs).\n",
-      "* In 2022, Khare et al. introduced DreamDiffusion: a method for generating high-resolution images from EEG signals using diffusion models and multi-level semantic information.\n",
-      "```\n",
-      "REFERENCES:\n",
-      "1. Krizhevsky, I., et al. (2012). Deep neural networks for large scale object recognition. NIPS Conference Proceedings Volume 26, 1st Annual Conference on Large Scale Vision Recognition, 10978-110035.\n",
-      "2. Schroff, F., et al. (2015). Facenet: a deep learning face representation paperwork and 1.5 billion triplet loss model in the wild. Proceedings of the IEEE International Conference on Computer Vision and Pattern Recognition (CVPR), 4867-4874.\n",
-      "3. Shen, Y., et al. (2019). NeuroVision: end-to-end deep image reconstruction from brain activity using a multi-modal deep learning approach. Journal of Medical and Biological Engineering, 5(5), 162-184.\n",
-      "4. Spampinato, F., et al. (2017). DeepMindSight: a neural network system that can learn to decode high-level visual percepts from human brain signals. ACM SIGGRAPH Workshop on Brain, Vision, and Robotics, 58-69.\n",
-      "5. Chen, C., et al. (2018). Brain2Image: Generating High-Resolution Images From EEG Signals Using GANs. In Proceedings of the IEEE International Conference on Biomedical Technology, Engineering and Sciences (BTES), 734-742.\n",
-      "6. Shen, Y., et al. (2019). NeuroVision: End-to-end deep image reconstruction from brain activity using a multi-modal deep learning approach. Journal of Medical and Biological Engineering, 5(5), 162-184.\n",
-      "7. Zeng, C., et al. (2023). The Controllable Mind Visual Diffusion Model for generating high-quality images and controlling their semantics using brain activity. arXiv preprint arXiv:2303.04965.\n",
-      "8. Zhao, J., et al. (2020). DARTS: A Differentiable Augmentation Technique for Data-efficient GAN Training. Proceedings of the IEEE/RSSE International Conference on Computer Vision and Pattern Recognition (CVPR), 9188-9194.\n",
-      "9. Ho, H., et al. (2022). BRAINSIM: Generating high-resolution images from brain signals using generative adversarial networks (GANs). arXiv preprint arXiv:2303.08656.\n",
+      " * A comprehensive survey of recent developments in image and computer vision research between 2012 and 2023 is presented.\n",
+      "* Notable works include NeuroVision, ImageNet classification, Blip-2, Geometric GANs, Mode seeking GANs, Decoding brain representations, Learning transferable visual models, High-resolution image synthesis with latent diffusion models, U-Net, Deep unsupervised learning, Denoising diffusion implicit models, and Self-supervised cross-modal retrieval.\n",
+      "* Three recent papers on arXiv are discussed: \"See what you see\", \"Controllable Mind Visual Diffusion Model\", and \"Differentiable augmentation for data-efficient GAN training\".\n",
+      "* The first paper proposes a self-supervised learning framework for cross-modal retrieval of visual stimuli from brain activity.\n",
+      "* The second paper introduces a Controllable Mind Visual Diffusion Model, which is a generative model that learns to synthesize realistic images conditioned on specific brain states or mental concepts.\n",
+      "* The third paper presents Differentiable Augmentation for Data-Efficient GAN Training, an approach to improve data efficiency and stability during Generative Adversarial Network (GAN) training by using differentiable data augmentations in both the generator and discriminator networks.\n",
       "```\n"
      ]
     }
