research evaluation metrics

--- a/ipynb/test.ipynb
+++ b/ipynb/test.ipynb
@@ -74,7 +74,7 @@
     {
      "data": {
       "text/plain": [
-       "dict_keys(['id', 'doi', 'title', 'display_name', 'publication_year', 'publication_date', 'ids', 'language', 'primary_location', 'type', 'type_crossref', 'indexed_in', 'open_access', 'authorships', 'countries_distinct_count', 'institutions_distinct_count', 'corresponding_author_ids', 'corresponding_institution_ids', 'apc_list', 'apc_paid', 'has_fulltext', 'cited_by_count', 'cited_by_percentile_year', 'biblio', 'is_retracted', 'is_paratext', 'keywords', 'concepts', 'mesh', 'locations_count', 'locations', 'best_oa_location', 'sustainable_development_goals', 'grants', 'referenced_works_count', 'referenced_works', 'related_works', 'ngrams_url', 'abstract_inverted_index', 'cited_by_api_url', 'counts_by_year', 'updated_date', 'created_date'])"
+       "dict_keys(['id', 'doi', 'title', 'display_name', 'publication_year', 'publication_date', 'ids', 'language', 'primary_location', 'type', 'type_crossref', 'indexed_in', 'open_access', 'authorships', 'countries_distinct_count', 'institutions_distinct_count', 'corresponding_author_ids', 'corresponding_institution_ids', 'apc_list', 'apc_paid', 'has_fulltext', 'cited_by_count', 'cited_by_percentile_year', 'biblio', 'is_retracted', 'is_paratext', 'topics', 'subfields', 'fields', 'domains', 'keywords', 'concepts', 'mesh', 'locations_count', 'locations', 'best_oa_location', 'sustainable_development_goals', 'grants', 'referenced_works_count', 'referenced_works', 'related_works', 'ngrams_url', 'abstract_inverted_index', 'cited_by_api_url', 'counts_by_year', 'updated_date', 'created_date'])"
       ]
      },
      "execution_count": 5,
@@ -426,10 +426,17 @@
    "metadata": {},
    "source": [
     "- nothing new. just a pipeline. is this what the company expects?\n",
+    "  - comparison between existing llm models & different ways to summarize (per section, 1 paragraph, etc)\n",
+    "  - comparison >> making pipeline\n",
     "- don't have a firm idea of what input/output should be + where it will be used\n",
+    "  - use case TBD. I could think about where it could be used. (button -> summarization)\n",
+    "  - ultimate goal: user don't need to read the original paper. => Chatbot on one paper / multiple papers (elicit. question -> papers & answer)\n",
     "- how to search for certain paper? doi? what would happen if paper doesn't provide open access? (https://docs.openalex.org/api-entities/works/get-a-single-work)\n",
-    "- local vs openai (local may take long time)\n",
-    "- cache? for accessed papers?\n"
+    "  - don't worry about papers without full text pdf\n",
+    "- local vs openai (local may take long time) => quality reasonable -> compare aws vs openai api cost => try aws llm (?).\n",
+    "  - compare aws llm vs local llm on aws vs open ai\n",
+    "- cache? for accessed papers? => maybe(?)\n",
+    "- finetuning is another option\n"
    ]
   },
   {
@@ -443,8 +450,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Can't attend next meeting\n",
     "- from now: reading papers, langchain, implementation\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 할것:\n",
+    "\n",
+    "- 논문 요약 원리 이해\n",
+    "- Evaluation metrics 조사 & 구현\n",
+    "- 논문 Preprocessing 구현\n",
+    "- Open Source 모델 조사 & 구현 (OpenAI랑 비교 / 가격 조사)\n",
+    "- Per section, 1 paragraph 요약 구현 & 비교\n",
+    "- output text 길이 조절 조사 & 구현\n",
+    "- AWS ATS 조사 & 구현\n",
+    "- Chatbot on one paper / multiple paper 조사 & 구현 (RAG)\n",
+    "- Finetuning 조사\n"
    ]
   }
  ],
