--- a/code/test.ipynb
+++ b/code/test.ipynb
@@ -1,6 +1,155 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluating...\n",
+      "=========================================\n",
+      "Summary Type     Summary 0  Summary 1\n",
+      "Evaluation Type                      \n",
+      "Coherence                5          5\n",
+      "Consistency              5          5\n",
+      "Fluency                  5          5\n",
+      "Relevance                5          5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# g_eval(\"document\", [\"summary\", \"summary2\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from evaluation import g_eval, blanc, shannon_score, estime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForMaskedLM: ['bert.pooler.dense.bias', 'bert.pooler.dense.weight', 'cls.seq_relationship.bias', 'cls.seq_relationship.weight']\n",
+      "- This IS expected if you are initializing BertForMaskedLM from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertForMaskedLM from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=====Blanc Score=====\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2760/2760 [08:49<00:00,  5.21it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Summary 0:  0.05764689540213919\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2760/2760 [07:53<00:00,  5.83it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Summary 1:  -0.015674850880843392\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "blanc(\"document\", [\"summary\", \"summary2\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at bert-large-uncased-whole-word-masking were not used when initializing BertForMaskedLM: ['bert.pooler.dense.bias', 'bert.pooler.dense.weight', 'cls.seq_relationship.bias', 'cls.seq_relationship.weight']\n",
+      "- This IS expected if you are initializing BertForMaskedLM from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertForMaskedLM from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=====Estime Score=====\n",
+      "Summary 0:\n",
+      "alarms: 98\n",
+      "alarms_adjusted: 134.55555555555554\n",
+      "soft: 0.416842505470392\n",
+      "coherence: -0.07420296410907525\n",
+      "Summary 1:\n",
+      "alarms: 41\n",
+      "alarms_adjusted: 70.70408163265306\n",
+      "soft: 0.5567356815627782\n",
+      "coherence: 0.03712577312941446\n"
+     ]
+    }
+   ],
+   "source": [
+    "estime(\"document\", [\"summary\", \"summary2\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=====Shannon Score=====\n",
+      "Summary 0:  0.05947356774126027\n",
+      "Summary 1:  -0.057725213524648177\n"
+     ]
+    }
+   ],
+   "source": [
+    "shannon_score(\"document\", [\"summary\", \"summary2\"])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
